# chebroots

./: README.md  environment.yml  setup.cfg
.binder/: environment.yml
.github/workflows/: black.yml
chebroots/: __init__.py  fitting.py
docs/: demo.ipynb
src/chebroots/: __init__.py  chebroots.py  equality.py  fitting.py  rootfinding.py
