[metadata]
name = chebroots
version = attr: chebroots.__version__
description = Recursively finding all roots of continuous functions using Chebyshev polynomials
long_description = file: README.md, LICENSE
keywords = Chebyshev, Root-finding
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    scipy
    chebpy @ git+https://github.com/chebpy/chebpy.git

[options.packages.find]
where=src
